--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Lint
       run: |
         autopep8 src/ tests/
-    - name: Test with pytest
+    - name: Pytest
       run: |
         poetry install
         poetry run pytest
